--- a/kong.yaml
+++ b/kong.yaml
@@ -2,13 +2,23 @@ _format_version: "3.0"
 _transform: true
 
 services:
-  - name: equipment-service
-    url: https://equipment-lg30.onrender.com
+  - name: equipments_service
+    url: https://equipment-lg30.onrender.com/api/
+    retries: 5
+    connect_timeout: 60000
+    read_timeout: 60000
+    write_timeout: 60000
+    enabled: true
     routes:
-      - name: equipment-api-route
+      - name: stuffs
         paths:
           - /api
         strip_path: true
         protocols:
           - http
           - https
+        request_buffering: true
+        response_buffering: true
+        https_redirect_status_code: 426
+        preserve_host: false
+        path_handling: v0
