--- a/kong.yaml
+++ b/kong.yaml
@@ -1,23 +1,28 @@
-{
-  "service": {
-    "name": "equipments_service",
-    "host": "equipment-lg30.onrender.com",
-    "protocol": "https",
-    "port": 443,
-    "path": "/api/",
-    "retries": 5,
-    "connect_timeout": 60000,
-    "read_timeout": 60000,
-    "write_timeout": 60000,
-    "enabled": true
-  },
-  "route": {
-    "name": "stuffs",
-    "paths": ["/api"],
-    "strip_path": false,
-    "protocols": ["http","https"],
-    "request_buffering": true,
-    "response_buffering": true,
-    "https_redirect_status_code": 426
-  }
-}
+_format_version: "3.0"
+_transform: true
+
+services:
+  - name: equipments_service
+    host: equipment-lg30.onrender.com
+    protocol: https
+    port: 443
+    path: /api/
+    retries: 5
+    connect_timeout: 60000
+    read_timeout: 60000
+    write_timeout: 60000
+    enabled: true
+
+routes:
+  - name: stuffs
+    service: 
+      name: equipments_service
+    paths:
+      - /api
+    protocols:
+      - http
+      - https
+    strip_path: false
+    request_buffering: true
+    response_buffering: true
+    https_redirect_status_code: 426
